@@ -383,12 +383,12 @@ qreal QmuParser::Max(const qreal *a_afArg, int a_iArgc)
 * @param [out] a_fVal Pointer where the value should be stored in case one is found.
 * @return 1 if a value was found 0 otherwise.
 */
-int QmuParser::IsVal(const QString &a_szExpr, int *a_iPos, qreal *a_fVal, const QLocale &locale, const QChar &decimal,
-                     const QChar &thousand)
+int QmuParser::IsVal(const QString &a_szExpr, int *a_iPos, qreal *a_fVal, const QLocale &locale, bool cNumbers,
+                     const QChar &decimal, const QChar &thousand)
 {
     qreal fVal(0);
 
-    const int pos = ReadVal(a_szExpr, fVal, locale, decimal, thousand);
+    int pos = ReadVal(a_szExpr, fVal, locale != QLocale::c() && cNumbers ? QLocale::c() : locale, decimal, thousand);
 
     if (pos == -1)
     {
@@ -495,8 +495,8 @@ void QmuParser::InitFun()
  */
 void QmuParser::InitConst()
 {
-    DefineConst("_pi", static_cast<qreal>(M_PI));
-    DefineConst("_e", static_cast<qreal>(M_E));
+    DefineConst(QStringLiteral("_pi"), static_cast<qreal>(M_PI));
+    DefineConst(QStringLiteral("_e"), static_cast<qreal>(M_E));
 }
 
 //---------------------------------------------------------------------------------------------------------------------
