@@ -66,7 +66,7 @@ public:
     QChar          GetArgSep() const;
     void           IgnoreUndefVar(bool bIgnore);
     void           ReInit();
-    token_type     ReadNextToken(const QLocale &locale, const QChar &decimal, const QChar &thousand);
+    token_type     ReadNextToken(const QLocale &locale, bool cNumbers, const QChar &decimal, const QChar &thousand);
 private:
 
     /**
@@ -111,7 +111,8 @@ private:
     bool            IsFunTok(token_type &a_Tok);
     bool            IsPostOpTok(token_type &a_Tok);
     bool            IsOprt(token_type &a_Tok);
-    bool            IsValTok(token_type &a_Tok, const QLocale &locale, const QChar &decimal, const QChar &thousand);
+    bool            IsValTok(token_type &a_Tok, const QLocale &locale, bool cNumbers, const QChar &decimal,
+                             const QChar &thousand);
     bool            IsVarTok(token_type &a_Tok);
     bool            IsStrVarTok(token_type &a_Tok);
     bool            IsUndefVarTok(token_type &a_Tok);
